--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <title>Document</title>
   </head>
   <body></body>
-  <script src="./main.js"></script>
+  <script src="./asyncawait.js"></script>
 </html>
